@@ -25,6 +25,8 @@ PHP                                                                        NEWS
 - Fixed tiger hash algorithm generating wrong results on big endian platforms.
   (Mike)
 - Fixed bug #36436 (DBA problem with Berkeley DB4). (Marcus)
+- Fixed bug #36434 (Improper resolution of declaring class name of an inherited
+  property). (Ilia)
 - Fixed bug #36420 (segfault when access result->num_rows after calling 
   result->close()). (Ilia)
 - Fixed bug #36403 (oci_execute() no longer supports OCI_DESCRIBE_ONLY). 
